# distributed-finetune-pipeline

./: .gitignore  Distributed_LLM_Pipeline_Demo.ipynb  Distributed_LLM_Pipeline_Demo.py  README.md  pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config_loader.py  custom_urls.txt  pipeline_config.yaml
data_curation/: dataset_assembler.py  versioning.py
data_curation/cleaners/: cleaning_pipeline.py
data_curation/llm_judge/: judge.py
data_curation/scrapers/: multi_source_scraper.py
deployment/aws/: main.tf  user_data_training.sh.tpl
deployment/docker/: Dockerfile.inference  Dockerfile.training  docker-compose.yml
deployment/scripts/: launch_inference.sh  launch_training.sh
docs/: MODEL_CARD.md
evaluation/: contamination_check.py  contamination_checker.py
evaluation/benchmarks/: domain_gen.jsonl  domain_mc.jsonl  instruction_following.jsonl  rubrics.yaml
evaluation/harness/: eval_harness.py
experiments/: tracker.py
inference/load_testing/: locustfile.py
inference/vllm_server/: server.py
model_merging/: merger.py
monitoring/: alert_rules.yml  metrics_collector.py  prometheus.yml
tests/: test_pipeline.py
training/: dpo_train.py  dpo_trainer.py  hyperparam_sweep.py  train.py
training/callbacks/: custom_callbacks.py
training/configs/: axolotl_config.yaml
training/distributed/: deepspeed_utils.py
